--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="3.0"
+<web-app id="Clinic" version="3.0"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>Clinic</display-name>
@@ -44,6 +44,17 @@
 	</filter-mapping>
 	<!-- hibernate config end -->
 	
+	<!-- login filter begin -->
+	<filter>
+		<filter-name>loginFilter</filter-name>
+		<filter-class>com.ibm.train.web.filters.LoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>loginFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- login filter end -->
+	
 	<!-- page filter begin -->
 	<filter>
 		<filter-name>pageFilter</filter-name>
@@ -67,6 +78,6 @@
 	<!-- struts config end -->
 
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
